Schemes issue fixed

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://dhineshrk77:dhineshrk77@cluster0.sjik3.mongodb.net/GovtSchemes
+MONGO_URI=mongodb+srv://anretv12:anretv12@cluster0.yzqrp.mongodb.net/GovtSchemes
