--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-PORT=5000
-MONGO_URI=mongodb+srv://anretv12:anretv12@cluster0.yzqrp.mongodb.net/GovtSchemes
+$env:PORT=5000 
+$env:MONGO_URI='mongodb+srv://anretv12:anretv12@cluster0.yzqrp.mongodb.net/GovtSchemes'
