--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "pnpm install --prefix backend && pnpm install --prefix govtSchemes && npm run build --prefix govtSchemes",
+    "build": "npm install --prefix backend && npm install --prefix govtSchemes && npm run build --prefix govtSchemes",
     "start": "pnpm start --prefix backend"
   },
   "keywords": [],
